# passgen

./: Cargo.toml  README.md
src/: cli.rs  main.rs  utils.rs
