[package]
name = "passgen"
version = "1.0.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple password generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
clipboard = "0.5"
colored = "2.0"
rand = "0.8"