[package]
name = "passgen"
version = "1.0.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple password generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clipboard = "0.5"
rand = "0.8"
structopt = "0.3"

[profile.release]
lto = true
codegen-units = 1
