[package]
name = "passgen"
version = "1.0.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple password generator"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
clipboard-ext = "0.2"
rand = "0.8"
structopt = "0.3"

[profile.release]
lto = true
codegen-units = 1
